--- a/CountOnMe/Vue/Base.lproj/Main.storyboard
+++ b/CountOnMe/Vue/Base.lproj/Main.storyboard
@@ -33,11 +33,11 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="60"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="top" spacing="34" translatesAutoresizingMaskIntoConstraints="NO" id="isI-Gg-Iye">
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="34" translatesAutoresizingMaskIntoConstraints="NO" id="isI-Gg-Iye">
                                                 <rect key="frame" x="0.0" y="362.5" width="384" height="342.5"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="U2a-5D-kgc">
-                                                        <rect key="frame" x="0.0" y="0.0" width="105.5" height="152"/>
+                                                        <rect key="frame" x="0.0" y="95.5" width="105.5" height="152"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Raa-av-x4n">
                                                                 <rect key="frame" x="0.0" y="0.0" width="105.5" height="44"/>
@@ -75,7 +75,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="xWG-wS-5L9">
-                                                        <rect key="frame" x="139.5" y="0.0" width="105" height="206"/>
+                                                        <rect key="frame" x="139.5" y="68.5" width="105" height="206"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jd7-ld-hSU">
                                                                 <rect key="frame" x="0.0" y="0.0" width="105" height="44"/>
@@ -124,7 +124,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="WCv-mh-kCr">
-                                                        <rect key="frame" x="278.5" y="0.0" width="105.5" height="152"/>
+                                                        <rect key="frame" x="278.5" y="95.5" width="105.5" height="152"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UDN-zf-T0y">
                                                                 <rect key="frame" x="0.0" y="0.0" width="105.5" height="44"/>
