--- a/CountOnMe/Vue/Base.lproj/Main.storyboard
+++ b/CountOnMe/Vue/Base.lproj/Main.storyboard
@@ -24,20 +24,20 @@
                                 <rect key="frame" x="15" y="59" width="384" height="788"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="vci-my-dKi">
-                                        <rect key="frame" x="0.0" y="0.0" width="384" height="705"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="384" height="622"/>
                                         <subviews>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="0" textAlignment="right" translatesAutoresizingMaskIntoConstraints="NO" id="T2H-yn-nBB">
-                                                <rect key="frame" x="0.0" y="0.0" width="384" height="342.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="384" height="301"/>
                                                 <color key="backgroundColor" red="0.24527746819999999" green="0.53481305040000005" blue="0.58749136739999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="60"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="34" translatesAutoresizingMaskIntoConstraints="NO" id="isI-Gg-Iye">
-                                                <rect key="frame" x="0.0" y="362.5" width="384" height="342.5"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="top" spacing="34" translatesAutoresizingMaskIntoConstraints="NO" id="isI-Gg-Iye">
+                                                <rect key="frame" x="0.0" y="321" width="384" height="301"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="U2a-5D-kgc">
-                                                        <rect key="frame" x="0.0" y="95.5" width="105.5" height="152"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="105.5" height="152"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Raa-av-x4n">
                                                                 <rect key="frame" x="0.0" y="0.0" width="105.5" height="44"/>
@@ -75,7 +75,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="xWG-wS-5L9">
-                                                        <rect key="frame" x="139.5" y="68.5" width="105" height="206"/>
+                                                        <rect key="frame" x="139.5" y="0.0" width="105" height="206"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jd7-ld-hSU">
                                                                 <rect key="frame" x="0.0" y="0.0" width="105" height="44"/>
@@ -124,7 +124,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="WCv-mh-kCr">
-                                                        <rect key="frame" x="278.5" y="95.5" width="105.5" height="152"/>
+                                                        <rect key="frame" x="278.5" y="0.0" width="105.5" height="152"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UDN-zf-T0y">
                                                                 <rect key="frame" x="0.0" y="0.0" width="105.5" height="44"/>
@@ -165,6 +165,17 @@
                                             </stackView>
                                         </subviews>
                                     </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U5M-Jy-sH4">
+                                        <rect key="frame" x="0.0" y="642" width="384" height="63"/>
+                                        <color key="backgroundColor" red="0.89803922179999995" green="0.54901963470000004" blue="0.58431375029999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="42"/>
+                                        <state key="normal" title="AC">
+                                            <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="tappedACButton:" destination="eqK-jh-KKu" eventType="touchUpInside" id="23g-Lt-fFg"/>
+                                        </connections>
+                                    </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="ogr-Aw-e1h">
                                         <rect key="frame" x="0.0" y="725" width="384" height="63"/>
                                         <subviews>
